updated text, added social icons and credits

--- a/project.json
+++ b/project.json
@@ -1,14 +1,14 @@
 {
-  "title": "",
-  "description": "",
+  "email_title": "Summer of Love -- SF Chronicle",
+  "description": "Despite its name, the counterculture movement was not contained to just one season in 1967. Discover - or rediscover - this radical era in Bay Area and American history.",
   "seo_title": "",
   "author":"",
   "hearst_category":"",
   "date":"2016-09-22",
-  "url": "http://projects.sfchronicle.com/2016/",
-  "slug": "SLUG-HERE-WITH-TRAILING-SLASH/",
-  "twitter_text":"",
-  "hashtag":"",
+  "url": "http://www.sfchronicle.com/",
+  "slug": "summer-of-love/",
+  "twitter_text":"Summer of Love, 50 years later: A radical era in Bay Area and American history.",
+  "hashtag":"SummerOfLove",
   "image": "assets/social.jpg",
   "sheets": ["105lVWmkiJnLdwgnJGJarZV11NVS0_fLfO6PDMnX2zzs"],
   "production": false,
